File base del nav bar

--- a/navigation-bar/nav-bar.html
+++ b/navigation-bar/nav-bar.html
@@ -13,17 +13,5 @@
     <title>Product Card</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body>
-    <div class="card">
-      <div class="card__image"></div>
-      <div class="card__content">
-        <div class="card__header">
-          <h2 class="card__title">100% Bio Honey</h2>
-          <h4 class="card__subtitle">Ialian, not treated</h4>
-        </div>
-        <h3 class="card__price">7$&#47;kg</h3>
-      </div>
-      <button class="card__button">Add to cart</button>
-    </div>
-  </body>
+  <body></body>
 </html>
