--- a/navigation-bar/nav-bar.html
+++ b/navigation-bar/nav-bar.html
@@ -13,5 +13,13 @@
     <title>Product Card</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="main-nav">
+      <div class="main-nav__item">Our Honey</div>
+      <div class="main-nav__item">Trace Honey</div>
+      <div class="main-nav__item">SHOP</div>
+      <div class="main-nav__item">Facilities</div>
+      <div class="main-nav__item">Contacts</div>
+    </nav>
+  </body>
 </html>
