Barra di navigazione

--- a/navigation-bar/nav-bar.html
+++ b/navigation-bar/nav-bar.html
@@ -15,11 +15,30 @@
   </head>
   <body>
     <nav class="main-nav">
-      <div class="main-nav__item">Our Honey</div>
-      <div class="main-nav__item">Trace Honey</div>
-      <div class="main-nav__item">SHOP</div>
-      <div class="main-nav__item">Facilities</div>
-      <div class="main-nav__item">Contacts</div>
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Our Honey</a>
+      </div>
+
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Trace Honey</a>
+      </div>
+
+      <div class="main-nav__item main-nav__item--big">
+        <img
+          class="main-nav__logo"
+          src="assets/imgs/logo.png"
+          alt="Honey Logo"
+        />
+        <a class="main-nav__link" href="#">SHOP</a>
+      </div>
+
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Facilities</a>
+      </div>
+
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Contacts</a>
+      </div>
     </nav>
   </body>
 </html>
