--- a/flexible-article/flexible-article.html
+++ b/flexible-article/flexible-article.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Product Card</title>
+    <title>Flexible Article</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body></body>
