--- a/navigation-bar/nav-bar.html
+++ b/navigation-bar/nav-bar.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Product Card</title>
+    <title>Navigation Bar</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
