--- a/flexible-article/flexible-article.html
+++ b/flexible-article/flexible-article.html
@@ -13,5 +13,26 @@
     <title>Flexible Article</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <article class="article">
+      <h1 class="article__title">Our delicious honey</h1>
+      <p class="article__p">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, fugiat
+        voluptates ratione unde porro obcaecati aspernatur excepturi quidem
+        praesentium magnam id cum aut alias harum illum! At, ratione! Veniam,
+        iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
+        dolorum ipsam minima adipisci, libero velit repellendus facilis
+        consequuntur magnam nostrum, inventore molestias iste non accusantium
+        cupiditate repellat? Commodi, dolore laborum? Lorem ipsum dolor sit
+        amet, consectetur adipisicing elit. Id iste ipsum quam. Consectetur ea
+        numquam architecto doloribus, odio laboriosam velit incidunt facilis
+        sapiente fugit praesentium delectus ut adipisci eius nisi! Lorem ipsum,
+        dolor sit amet consectetur adipisicing elit. Quas vitae consectetur
+        tempora eveniet labore aperiam nam cupiditate at cum voluptas inventore,
+        itaque, velit repudiandae obcaecati culpa quibusdam alias? Quae,
+        voluptate!
+      </p>
+      <img class="article__img" src="assets/imgs/honey.jpg" alt="Honey Pot" />
+    </article>
+  </body>
 </html>
