--- a/complete-layout/index.html
+++ b/complete-layout/index.html
@@ -4,7 +4,118 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Honey</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="main-nav">
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Our Honey</a>
+      </div>
+
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Trace Honey</a>
+      </div>
+
+      <div class="main-nav__item main-nav__item--big">
+        <img
+          class="main-nav__logo"
+          src="assets/imgs/logo.png"
+          alt="Honey Logo"
+        />
+        <a class="main-nav__link" href="#">SHOP</a>
+      </div>
+
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Facilities</a>
+      </div>
+
+      <div class="main-nav__item">
+        <a class="main-nav__link" href="#">Contacts</a>
+      </div>
+    </nav>
+
+    <h2 class="subtitle">Best Selling Products</h2>
+
+    <div class="cards-container">
+      <div class="card">
+        <div class="card__image"></div>
+        <div class="card__content">
+          <div class="card__header">
+            <h2 class="card__title">100% Bio Honey</h2>
+            <h4 class="card__subtitle">Ialian, not treated</h4>
+          </div>
+          <h3 class="card__price">7$&#47;kg</h3>
+        </div>
+        <button class="card__button">Add to cart</button>
+      </div>
+
+      <div class="card">
+        <div class="card__image"></div>
+        <div class="card__content">
+          <div class="card__header">
+            <h2 class="card__title">100% Bio Honey</h2>
+            <h4 class="card__subtitle">Ialian, not treated</h4>
+          </div>
+          <h3 class="card__price">7$&#47;kg</h3>
+        </div>
+        <button class="card__button">Add to cart</button>
+      </div>
+
+      <div class="card">
+        <div class="card__image"></div>
+        <div class="card__content">
+          <div class="card__header">
+            <h2 class="card__title">100% Bio Honey</h2>
+            <h4 class="card__subtitle">Ialian, not treated</h4>
+          </div>
+          <h3 class="card__price">7$&#47;kg</h3>
+        </div>
+        <button class="card__button">Add to cart</button>
+      </div>
+
+      <div class="card">
+        <div class="card__image"></div>
+        <div class="card__content">
+          <div class="card__header">
+            <h2 class="card__title">100% Bio Honey</h2>
+            <h4 class="card__subtitle">Ialian, not treated</h4>
+          </div>
+          <h3 class="card__price">7$&#47;kg</h3>
+        </div>
+        <button class="card__button">Add to cart</button>
+      </div>
+    </div>
+
+    <h2 class="subtitle">Last News</h2>
+    <article class="article">
+      <img class="article__img" src="assets/imgs/honey.jpg" alt="Honey Pot" />
+
+      <div class="article__content">
+        <h1 class="article__title">Our delicious honey</h1>
+        <p class="article__p">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, fugiat
+          voluptates ratione unde porro obcaecati aspernatur excepturi quidem
+          praesentium magnam id cum aut alias harum illum! At, ratione! Veniam,
+          iure. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Deserunt, dolorum ipsam minima adipisci, libero velit repellendus
+          facilis consequuntur magnam nostrum, inventore molestias iste non
+          accusantium cupiditate repellat? Commodi, dolore laborum? Lorem ipsum
+          dolor sit amet, consectetur adipisicing elit. Id iste ipsum quam.
+          Consectetur ea numquam architecto doloribus, odio laboriosam velit
+          incidunt facilis sapiente fugit praesentium delectus ut adipisci eius
+          nisi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+          vitae consectetur tempora eveniet labore aperiam nam cupiditate at cum
+          voluptas inventore, itaque, velit repudiandae obcaecati culpa
+          quibusdam alias? Quae, voluptate!
+        </p>
+      </div>
+    </article>
+  </body>
 </html>
